--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -10,3 +10,17 @@ h2 {
   color: $secondaryColor;
   font-size: $fontSize;
 }
+
+.container {
+  background-color: $primaryColor;
+  ul {
+    list-style: nonr;
+    li {
+      color: $secondaryColor;
+      a {
+        text-decoration: none;
+        color: $secondaryColor;
+      }
+    }
+  }
+}
