--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -29,6 +29,9 @@ h2 {
   padding: 10px;
   margin: 10px;
 }
+.textdiv h1:hover {
+  background-color: hsl(327, 100%, 42%);
+}
 
 .textdiv h3 {
   color: hsl(0, 0%, 100%);
