--- a/styles/sass/_mixins.scss
+++ b/styles/sass/_mixins.scss
@@ -2,8 +2,8 @@
   color: $secondaryColor;
   background-color: $primaryColor;
   border-radius: 10px;
-  padding: 10px;
-  margin: 10px;
+  padding: (20px/2);
+  margin: (10px+100px);
 }
 
 @mixin textHover {
